# swissarmyhammer

./: .gitignore  CHANGELOG.md  CLI_COMPREHENSIVE_TESTING_SUMMARY.md  CLI_MIGRATION.md  CODE_REVIEW.md  CODING_STANDARDS.md  Cargo.toml  DOCUMENTATION_REVIEW.md  INSTALLATION.md  LICENSE  PERFORMANCE.md  README.md  clippy.toml  debug_issue_numbering.rs  install.sh  rustfmt.toml  test_all_prompts  test_failures.md  test_final.txt  test_output.txt  test_output2.txt  test_partial_load  test_real_scenario.rs  test_search_reproduction.rs  test_status_final.md
swissarmyhammer/: Cargo.toml  build.rs
swissarmyhammer-cli/: Cargo.toml  build.rs
swissarmyhammer-cli/benches/: cli_performance_benchmarks.rs
swissarmyhammer-cli/src/: cli.rs  completions.rs  error.rs  exit_codes.rs  export.rs  flow.rs  import.rs  issue.rs  lib.rs  list.rs  logging.rs  main.rs  mcp_integration.rs  memo.rs  prompt.rs  prompt_loader.rs  search.rs  signal_handler.rs  test.rs  validate.rs  validate.rs.bak
swissarmyhammer-cli/src/doctor/: checks.rs  mod.rs  types.rs  utils.rs
swissarmyhammer-cli/src/mcp/: mod.rs  server.rs  server_stub.rs  test_mcp_server_issue.rs
swissarmyhammer-cli/tests/: abort_error_cli_test.rs  behavioral_consistency_tests.rs  binary_aliases_test.rs  cli_integration_test.rs  cli_mcp_integration_test.rs  comprehensive_cli_mcp_integration_tests.rs  config_integration_test.rs  e2e_workflow_tests.rs  error_scenario_tests.rs  mcp_e2e_tests.rs  mcp_integration_test.rs  mcp_logging_test.rs  mcp_mock_integration_tests.rs  mcp_notification_e2e_test.rs  mcp_notification_simple_test.rs  mcp_partial_e2e_test.rs  mcp_performance_tests.rs  mcp_server_shutdown_test.rs  memo_cli_tests.rs  regression_testing_framework.rs  search_cli_test.rs  test_builtin_validation.rs  test_doc_examples.rs  test_example_actions_workflow.rs  test_set_variables.rs  test_sub_workflow_integration.rs  test_utils.rs
swissarmyhammer/examples/: async_and_mcp.rs  basic_usage.rs  custom_templates.rs  debug_issue_186_listing.rs  debug_parse_000186.rs  memoranda_usage.rs  search_example.rs  validate_performance.rs
swissarmyhammer/issues/: 000002_second_issue.md  000008_first_issue.md  000010_test_issue.md
swissarmyhammer/proptest-regressions/: config.txt
swissarmyhammer/src/: config.rs  directory_utils.rs  error.rs  file_loader.rs  file_watcher.rs  fs_utils.rs  git.rs  issues.rs  lib.rs  mcp.rs  plugins.rs  prompt_filter.rs  prompt_resolver.rs  prompts.rs  search.rs  search_advanced.rs  security.rs  storage.rs  template.rs  test_utils.rs
swissarmyhammer/src/common/: abort_handler.rs  env_loader.rs  error_context.rs  file_types.rs  mcp_errors.rs  mod.rs  rate_limiter.rs  ulid_generator.rs  validation_builders.rs
swissarmyhammer/src/cost/: calculator.rs  formatting.rs  integration_tests.rs  mod.rs  test_utils.rs  token_counter.rs  token_estimation.rs  token_integration_tests.rs  tracker.rs
swissarmyhammer/src/cost/aggregation/: analyzer.rs  mod.rs  reports.rs  tests.rs  trends.rs
swissarmyhammer/src/cost/database/: config.rs  migrations.rs  mod.rs  queries.rs  schema.rs
swissarmyhammer/src/cost/integration_tests/: api_interception.rs  api_interception_functional.rs  api_interception_helpers.rs  api_interception_performance.rs  api_interception_reliability.rs  mod.rs  storage.rs
swissarmyhammer/src/cost/performance/: async_storage.rs  benchmarks.rs  memory.rs  mod.rs  monitoring.rs  optimization.rs  token_optimization.rs
swissarmyhammer/src/cost/test_utils/: mock_mcp.rs  mod.rs  storage_helpers.rs
swissarmyhammer/src/cost/tests/: mod.rs
swissarmyhammer/src/issues/: cache.rs  cached_storage.rs  filesystem.rs  instrumented_storage.rs  metrics.rs  mod.rs  utils.rs
swissarmyhammer/src/mcp/: constants.rs  cost_tracking.rs  error_handling.rs  file_watcher.rs  memo_types.rs  mod.rs  responses.rs  search_types.rs  server.rs  shared_utils.rs  tests.rs  tool_descriptions.rs  tool_handlers.rs  tool_registry.rs  types.rs  utils.rs
swissarmyhammer/src/mcp/tools/: ARCHITECTURE.md  BUILD_MACRO_RESEARCH.md  TESTING_FRAMEWORK_ASSESSMENT.md  TOOL_INVENTORY.md  mod.rs
swissarmyhammer/src/memoranda/: advanced_search.rs  mock_storage.rs  mod.rs  storage.rs  storage_markdown_tests.rs
swissarmyhammer/src/search/: embedding.rs  indexer.rs  parser.rs  searcher.rs  storage.rs  tests.rs  types.rs  utils.rs
swissarmyhammer/src/semantic/: embedding.rs  indexer.rs  mod.rs  parser.rs  searcher.rs  storage.rs  tests.rs  types.rs  utils.rs
swissarmyhammer/src/validation/: mod.rs
swissarmyhammer/src/workflow/: action_parser.rs  actions.rs  actions_tests.rs  cache.rs  definition.rs  error_utils.rs  examples_tests.rs  executor.rs  graph.rs  graph_tests.rs  metrics.rs  metrics_tests.rs  mod.rs  parser.rs  run.rs  state.rs  storage.rs  test_helpers.rs  test_liquid_rendering.rs  transition.rs  transition_key.rs  visualization.rs  visualization_tests.rs  workflow.rs
swissarmyhammer/src/workflow/actions_tests/: action_parsing_tests.rs  claude_output_formatting_tests.rs  claude_retry_tests.rs  common.rs  concurrent_action_tests.rs  error_handling_tests.rs  integration_tests.rs  log_action_tests.rs  mod.rs  prompt_action_tests.rs  resource_cleanup_tests.rs  shell_action_integration_tests.rs  shell_action_tests.rs  simple_state_pollution_test.rs  sub_workflow_action_tests.rs  sub_workflow_state_pollution_tests.rs  wait_action_tests.rs
swissarmyhammer/src/workflow/executor/: cache.rs  compensation.rs  core.rs  cost_integration.rs  fork_join.rs  mod.rs  tests.rs  validation.rs
swissarmyhammer/src/workflow/metrics/: cleanup.rs  cost.rs  trends.rs  (+2 more)
swissarmyhammer/test_liquid/: test.liquid
swissarmyhammer/tests/: abort_error_integration_tests.rs  abort_error_pattern_tests.rs  debug_issue_completion.rs  integration_tests.rs  issue_all_complete_edge_cases.rs  issue_completion_fix_verification.rs  issue_completion_path_bug_test.rs  mcp_issue_integration_tests.rs  mcp_memoranda_tests.rs  memo_migration_integration.rs  path_completion_precision_test.rs  plugin_tests.rs  test_helpers.rs  test_home_integration.rs  test_partials_issue.rs
(+802 files in other folders)
