[package]
name = "swissarmyhammer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
colored = "2"
is-terminal = "0.4"
rmcp = { version = "0.1.5", features = ["server", "transport-io"] }
walkdir = "2"
dirs = "5"
rust-embed = "8"
notify = "6"
dashmap = "6"
regex = "1"
tabled = "0.15"
liquid = "0.26"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
arboard = "3.4"
atty = "0.2"
tantivy = "0.22"
fuzzy-matcher = "0.3"
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
reqwest = { version = "0.11", features = ["json", "stream"] }
git2 = "0.18"
fs_extra = "1.3"
url = "2.4"
indicatif = "0.17"
sha2 = "0.10"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"
textwrap = "0.16"
csv = "1.3"
rand = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
proptest = "1.0"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
# Enable Link Time Optimization for smaller binaries
lto = true
# Strip debug symbols
strip = true
# Enable all optimizations
opt-level = 3
# Reduce code generation units for better optimization
codegen-units = 1
# Abort on panic for smaller binary size
panic = "abort"
