[workspace]
members = ["swissarmyhammer", "swissarmyhammer-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SwissArmyHammer Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/swissarmyhammer/swissarmyhammer"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Library core dependencies
liquid = "0.26"
walkdir = "2"
dashmap = "6"
regex = "1"
tantivy = "0.22"
fuzzy-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"

# CLI specific dependencies
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2"
is-terminal = "0.4"

rmcp = { version = "0.2.1", features = ["server", "transport-io"] }
dirs = "5"
rust-embed = "8"
tabled = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
arboard = "3.4"
atty = "0.2"
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
reqwest = { version = "0.11", features = ["json", "stream"] }
git2 = "0.18"
fs_extra = "1.3"
url = "2.4"
indicatif = "0.17"
sha2 = "0.10"
futures-util = "0.3"
tempfile = "3.0"
textwrap = "0.16"
csv = "1.3"
rand = "0.8"

# Dev dependencies
assert_cmd = "2.0"
predicates = "3.0"
proptest = "1.0"
criterion = "0.5"

[profile.release]
# Enable Link Time Optimization for smaller binaries
lto = "thin" # Use thin LTO for faster builds and startup
# Strip debug symbols
strip = true
# Optimize for speed over size for faster startup
opt-level = 3
# More codegen units for faster compilation and startup
codegen-units = 16
# Abort on panic for smaller binary size
panic = "abort"

# Additional profile for startup optimization
[profile.release-fast]
inherits = "release"
# Optimize specifically for startup time
lto = false         # Disable LTO for faster startup
codegen-units = 256 # Maximum parallelization
incremental = true
