[workspace]
members = ["swissarmyhammer", "swissarmyhammer-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SwissArmyHammer Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/swissarmyhammer/swissarmyhammer"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.46", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Library core dependencies
liquid = "0.26.11"
walkdir = "2"
dashmap = "6"
regex = "1"
tantivy = "0.24"
fuzzy-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
glob = "0.3"
ignore = "0.4"

# Semantic Search Dependencies
ort = "2.0.0-rc.10"
tokenizers = "0.20"
hf-hub = { version = "0.3", features = ["tokio"] }
ndarray = "0.16"
duckdb = { version = "1.3.2", features = ["bundled"] }
tree-sitter = "0.25.8"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.23.6"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-dart = "0.0.4"
md5 = "0.7"

# CLI specific dependencies
clap = { version = "4.5.41", features = ["derive"] }
clap_complete = "4"
colored = "2"
is-terminal = "0.4"

rmcp = { version = "0.2.1", features = ["server", "transport-io"] }
dirs = "5"
rust-embed = "8"
tabled = "0.20"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
arboard = "3.4"
atty = "0.2"
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
reqwest = { version = "0.12", features = ["json", "stream"] }
git2 = "0.18"
fs_extra = "1.3"
url = "2.4"
indicatif = "0.17"
sha2 = "0.10"
futures-util = "0.3"
tempfile = "3.0"
textwrap = "0.16"
csv = "1.3"
rand = "0.8"
syntect = "5.2"
once_cell = "1.19"

# Dev dependencies
assert_cmd = "2.0"
predicates = "3.0"
proptest = "1.0"
criterion = "0.5"
serial_test = "3.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
