[package]
name = "swissarmyhammer-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for SwissArmyHammer prompt management"
default-run = "swissarmyhammer"

[lib]
name = "swissarmyhammer_cli"
path = "src/lib.rs"

[[bin]]
name = "swissarmyhammer"
path = "src/main.rs"

[[bin]]
name = "sah"
path = "src/main.rs"

[dependencies]
# Library dependency
swissarmyhammer = { path = "../swissarmyhammer" }

# CLI dependencies
clap = { workspace = true }
clap_complete = { workspace = true }
colored = { workspace = true }
is-terminal = { workspace = true }
dirs = { workspace = true }
rust-embed = { workspace = true }
tabled = { workspace = true }
dialoguer = { workspace = true }
arboard = { workspace = true }
atty = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# MCP support
rmcp = { workspace = true }

# File operations
walkdir = { workspace = true }
notify = { workspace = true }
tempfile = { workspace = true }

# Archive support
tar = { workspace = true }
flate2 = { workspace = true }
zip = { workspace = true }

# Network
reqwest = { workspace = true }
url = { workspace = true }

# Git support
git2 = { workspace = true }

# Utils
fs_extra = { workspace = true }
indicatif = { workspace = true }
sha2 = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
textwrap = { workspace = true }
csv = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
fuzzy-matcher = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
nix = { version = "0.27", features = ["signal"] }
